--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>While(Coffee)True</title>
     <script src="https://kit.fontawesome.com/0da442c4cc.js" crossorigin="anonymous"></script>
-    <link rel="icon" type="image/jpg" href="/images/logo.webp"/>
+    <link rel="icon" type="image/jpg" href="images/logo.webp"/>
     <link rel="stylesheet" href="styles.css" />
 </head>
 
@@ -131,7 +131,7 @@
                 <!-- Producto 1 -->
                 <div class="card-product">
                     <div class="container-img">
-                        <img src="/images/cafe-irish.jpg" alt="Cafe Irish" />
+                        <img src="images/cafe-irish.jpg" alt="Cafe Irish" />
                         <div class="button-group">
                             <span>
                                 <i class="fa-regular fa-eye"></i>
@@ -162,7 +162,7 @@
                 <!-- Producto 2 -->
                 <div class="card-product">
                     <div class="container-img">
-                        <img src="/images/cafe-ingles.jpg" alt="Cafe incafe-ingles.jpg" />
+                        <img src="images/cafe-ingles.jpg" alt="Cafe incafe-ingles.jpg" />
                         <div class="button-group">
                             <span>
                                 <i class="fa-regular fa-eye"></i>
@@ -193,7 +193,7 @@
                 <!--  -->
                 <div class="card-product">
                     <div class="container-img">
-                        <img src="/images/cafe-australiano.jpg" alt="Cafe Australiano" />
+                        <img src="images/cafe-australiano.jpg" alt="Cafe Australiano" />
                         <div class="button-group">
                             <span>
                                 <i class="fa-regular fa-eye"></i>
@@ -224,7 +224,7 @@
                 <!--  -->
                 <div class="card-product">
                     <div class="container-img">
-                        <img src="/images/cafe-helado.jpg" alt="Cafe Helado" />
+                        <img src="images/cafe-helado.jpg" alt="Cafe Helado" />
                         <div class="button-group">
                             <span>
                                 <i class="fa-regular fa-eye"></i>
@@ -255,10 +255,10 @@
             </div>
         </section>
         <section class="gallery">
-            <img src="/images/gallery1.jpg" alt="Gallery Img1" class="gallery-img-1" /><img src="/images/gallery2.jpg"
-                alt="Gallery Img2" class="gallery-img-2" /><img src="/images/gallery3.jpg" alt="Gallery Img3"
-                class="gallery-img-3" /><img src="/images/gallery4.jpg" alt="Gallery Img4" class="gallery-img-4" /><img
-                src="/images/gallery5.jpg" alt="Gallery Img5" class="gallery-img-5" />
+            <img src="images/gallery1.jpg" alt="Gallery Img1" class="gallery-img-1" /><img src="images/gallery2.jpg"
+                alt="Gallery Img2" class="gallery-img-2" /><img src="images/gallery3.jpg" alt="Gallery Img3"
+                class="gallery-img-3" /><img src="images/gallery4.jpg" alt="Gallery Img4" class="gallery-img-4" /><img
+                src="images/gallery5.jpg" alt="Gallery Img5" class="gallery-img-5" />
         </section>
 
         <section class="container specials">
@@ -268,7 +268,7 @@
                 <!-- Producto 1 -->
                 <div class="card-product">
                     <div class="container-img">
-                        <img src="/images/cafe-irish.jpg" alt="Cafe Irish" />
+                        <img src="images/cafe-irish.jpg" alt="Cafe Irish" />
                         <div class="button-group">
                             <span>
                                 <i class="fa-regular fa-eye"></i>
@@ -298,7 +298,7 @@
                 </div>
                 <div class="card-product">
                     <div class="container-img">
-                        <img src="/images/cafe-viena.jpg" alt="Cafe Viena" />
+                        <img src="images/cafe-viena.jpg" alt="Cafe Viena" />
                         <div class="button-group">
                             <span>
                                 <i class="fa-regular fa-eye"></i>
@@ -329,7 +329,7 @@
                 <!--  -->
                 <div class="card-product">
                     <div class="container-img">
-                        <img src="/images/cafe-liqueurs.jpg" alt="Cafe Liqueurs" />
+                        <img src="images/cafe-liqueurs.jpg" alt="Cafe Liqueurs" />
                         <div class="button-group">
                             <span>
                                 <i class="fa-regular fa-eye"></i>
@@ -432,7 +432,7 @@
                         Desarrollado por Darkas Overgold &copy; 2024
                     </p>
 
-                    <img src="/images/payment.png" alt="pagos">
+                    <img src="images/payment.png" alt="pagos">
                 </div>
             </div>
         </footer>
