--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>While(Coffee)True</title>
     <script src="https://kit.fontawesome.com/0da442c4cc.js" crossorigin="anonymous"></script>
-    <link rel="icon" type="image/jpg" href="images/logo.webp"/>
+    <link rel="icon" type="image/png" href="images/logo.png"/>
     <link rel="stylesheet" href="styles.css" />
 </head>
 
@@ -366,10 +366,10 @@
                         <p class="title-footer">Información de Contacto</p>
                         <ul>
                             <li>
-                                Dirección: Av.la Molina 756, La Molina 15023
+                                Dirección: Calle Jaén 172, Mayorazgo, Tercera etapa, Ate.
                             </li>
-                            <li>Teléfono: 123-456-7890</li>
-                            <li>EmaiL: saboragrano@support.com</li>
+                            <li>Teléfono:(+51) 910030901</li>
+                            <li>EmaiL: dev@darkas.me</li>
                         </ul>
                         <div class="social-icons">
                             <span class="facebook">
