--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
 <html lang="SP">
 
 <head>
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>While(Coffee)True</title>
     <script src="https://kit.fontawesome.com/0da442c4cc.js" crossorigin="anonymous"></script>
-    <link rel="icon" type="image/png" href="images/logo.png"/>
+    <link rel="icon" type="image/jpg" href="images/logo.webp" />
     <link rel="stylesheet" href="styles.css" />
 </head>
 
@@ -15,11 +15,19 @@
     <header>
         <div class="container-hero">
             <div class="container hero">
+                <div class="devs">
+                    <i class="fa-solid fa-headset"></i>
+                    <div class="content-devs">
+                        <span class="text">Beneficios para ingenieros de Software/Informáticos y devs en general</span>
+                        <span class="number">¿El café te mantiene vivo?, contacta con nosotros para obtener beneficios solo por poseer correo institucional.</span>
+                    </div>
+                </div>
+
                 <div class="customer-support">
                     <i class="fa-solid fa-headset"></i>
                     <div class="content-customer-support">
                         <span class="text">Soporte al cliente</span>
-                        <span class="number">123-456-7890</span>
+                        <span class="number">(+51) 910030901</span>
                     </div>
                 </div>
 
@@ -113,7 +121,6 @@
                 <div class="card-category category-capuchino">
                     <p>Capuchino</p>
                     <span>Ver más</span>
-
                 </div>
             </div>
         </section>
@@ -162,7 +169,7 @@
                 <!-- Producto 2 -->
                 <div class="card-product">
                     <div class="container-img">
-                        <img src="images/cafe-ingles.jpg" alt="Cafe incafe-ingles.jpg" />
+                        <img src="images/cafe-ingles.jpg" alt="Cafe Inglés" />
                         <div class="button-group">
                             <span>
                                 <i class="fa-regular fa-eye"></i>
@@ -190,7 +197,7 @@
                         <p class="price">S/17.80</p>
                     </div>
                 </div>
-                <!--  -->
+                <!-- Producto 3 -->
                 <div class="card-product">
                     <div class="container-img">
                         <img src="images/cafe-australiano.jpg" alt="Cafe Australiano" />
@@ -221,7 +228,7 @@
                         <p class="price">S/18.50</p>
                     </div>
                 </div>
-                <!--  -->
+                <!-- Producto 4 -->
                 <div class="card-product">
                     <div class="container-img">
                         <img src="images/cafe-helado.jpg" alt="Cafe Helado" />
@@ -293,7 +300,7 @@
                         <span class="add-cart">
                             <i class="fa-solid fa-basket-shopping"></i>
                         </span>
-                        <p class="price">S/16.00
+                        <p class="price">S/16.00</p>
                     </div>
                 </div>
                 <div class="card-product">
@@ -323,10 +330,10 @@
                         <span class="add-cart">
                             <i class="fa-solid fa-basket-shopping"></i>
                         </span>
-                        <p class="price">S/20.00
+                        <p class="price">S/20.00</p>
                     </div>
                 </div>
-                <!--  -->
+                <!-- Producto 3 -->
                 <div class="card-product">
                     <div class="container-img">
                         <img src="images/cafe-liqueurs.jpg" alt="Cafe Liqueurs" />
@@ -359,6 +366,7 @@
                 </div>
             </div>
         </section>
+        
         <footer class="footer">
             <div class="container container-footer">
                 <div class="menu-footer">
@@ -369,7 +377,7 @@
                                 Dirección: Calle Jaén 172, Mayorazgo, Tercera etapa, Ate.
                             </li>
                             <li>Teléfono:(+51) 910030901</li>
-                            <li>EmaiL: dev@darkas.me</li>
+                            <li>Email: dev@darkas.me</li>
                         </ul>
                         <div class="social-icons">
                             <span class="facebook">
@@ -395,9 +403,9 @@
                         <ul>
                             <li><a href="#">Acerca de Nosotros</a></li>
                             <li><a href="#">Información Delivery</a></li>
-                            <li><a href="#">Politicas de Privacidad</a></li>
+                            <li><a href="#">Políticas de Privacidad</a></li>
                             <li><a href="#">Términos y condiciones</a></li>
-                            <li><a href="#">Contactános</a></li>
+                            <li><a href="#">Contáctanos</a></li>
                         </ul>
                     </div>
 
@@ -406,7 +414,7 @@
 
                         <ul>
                             <li><a href="#">Mi cuenta</a></li>
-                            <li><a href="#">Historial de ordenes</a></li>
+                            <li><a href="#">Historial de órdenes</a></li>
                             <li><a href="#">Lista de deseos</a></li>
                             <li><a href="#">Boletín</a></li>
                             <li><a href="#">Reembolsos</a></li>
@@ -421,7 +429,7 @@
                                 Suscríbete a nuestros boletines ahora y mantente al
                                 día con nuevas colecciones y ofertas exclusivas.
                             </p>
-                            <input type="email" placeholder="Ingresa el correo aquí...">
+                            <input type="email" placeholder="Ingresa el correo aquí..." />
                             <button>Suscríbete</button>
                         </div>
                     </div>
@@ -432,7 +440,7 @@
                         Desarrollado por Darkas Overgold &copy; 2024
                     </p>
 
-                    <img src="images/payment.png" alt="pagos">
+                    <img src="images/payment.png" alt="pagos" />
                 </div>
             </div>
         </footer>
