--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>While(Coffee)True</title>
     <script src="https://kit.fontawesome.com/0da442c4cc.js" crossorigin="anonymous"></script>
-    <link rel="icon" type="image/jpg" href="images/logo.webp" />
+    <link rel="icon" type="image/png" href="images/logo.png" />
     <link rel="stylesheet" href="styles.css" />
 </head>
 
