--- a/index.html
+++ b/index.html
@@ -17,10 +17,6 @@
             <div class="container hero">
                 <div class="devs">
                     <i class="fa-solid fa-headset"></i>
-                    <div class="content-devs">
-                        <span class="text">Beneficios para ingenieros de Software/Informáticos y devs en general</span>
-                        <span class="number">¿El café te mantiene vivo?, contacta con nosotros para obtener beneficios solo por poseer correo institucional.</span>
-                    </div>
                 </div>
 
                 <div class="customer-support">
@@ -105,6 +101,13 @@
                     <span>Servicio al cliente 24/7</span>
                     <p>LLámenos 24/7 al 123-456-7890</p>
                 </div>
+            </div>
+            
+            <div class="card-feature">
+                <i class="fa-solid fa-gift"></i>
+            <div class="content-devs">
+                        <span class="text">Beneficios para ingenieros de Software/Informáticos y devs en general</span>
+                        <span class="number">¿El café te mantiene vivo?, contacta con nosotros para obtener beneficios solo por poseer correo institucional.</span>
             </div>
         </section>
         <section class="container top-categories">
